# newyears_2025

./: .gitmodules  .pre-commit-config.yaml  BadgeClass.kicad_sym  BadgeClassBase.kicad_pcb  BadgeClassBase.kicad_sch  Cargo.toml  README.md  sym-lib-table
BadgeClass.pretty/: JAE_DX07S016JA1R1500.kicad_mod  LFCSP-6-1EP_2x2mm_P0.65mm_EP1.4x0.8mm.kicad_mod  OLED_Display.kicad_mod  OwO.kicad_mod
LEDs/: LED RGB 5mm.STEP
USB-Connector/: JAE_DX07S016JA1R1500.kicad_mod
artwork/: Hacky-25-Optimized-Cut.ngc  Hacky-25-Optimized-Etch-M4.ngc
hardware/: BadgeClassBase.kicad_pro  README.md  fp-lib-table
hardware/BadgeClass.pretty/: LED_RGB_0606.kicad_mod  LED_RGB_5mm.kicad_mod  Paw-Connect_RevB_TC2030-IDC-NL_2x03_P1.27mm_Vertical.kicad_mod  SqeakSqeak.kicad_mod  TramOutline.kicad_mod
hardware/LEDs/: SMD 1204 Side-Mount RGB.STEP
software/dev_scripts/: run_perf.sh
software/example-midi/bach-cello/: Cargo.toml
software/example-midi/bach-guitar/: Cargo.toml  README.md
software/example-midi/bethena/: Cargo.toml  README.md
software/example-midi/devienne-oboe/: Cargo.toml  README.md
software/example-midi/entertainer/: Cargo.toml  README.md
software/example-midi/mapleleaf_rag/: Cargo.toml  README.md
software/midi-nostd/: .gitignore  Cargo.toml
software/midi-nostd/src/: adsr.rs  adsr_back.rs  adsr_experimental.rs  adsr_working.rs  amp_adder.rs  amp_mixer.rs  bass.rs  cello.rs  choir.rs  double_oscillator.rs  electric_piano.rs  filter.rs  filter_term_calculator.py  foo.rs  free_list.rs  french_horn.rs  guitar_acoustic.rs  instrument_low_pass_filters.rs  instrument_template_amp_lfo.rs  instrument_template_basic.rs  lfo_amplitude.rs  lib.rs  midi.rs  midi_channels.rs  midi_events.rs  midi_notes.rs  midi_time.rs  midi_track.rs  note.rs  oboe.rs  oscillator.rs  piano.rs  sax.rs  silence.rs  sound_sample.rs  sound_source.rs  sound_source_core.rs  sound_source_id.rs  sound_source_msgs.rs  sound_source_pool.rs  (+12 more)
software/reference/: pio_experiment.rs  wave_tables.py
software/rp2040_firmware/: Cargo.toml  memory.x  readme.md
software/rp2040_firmware/.cargo/: config.toml
software/rp2040_firmware/assets/: convert.sh
software/rp2040_firmware/src/: README.md  animating_gif.rs  audio_playback.rs  backlight.rs  buttons.rs  devices.rs  display.rs  led_driver.rs  leds.rs  lib.rs  main.rs  menu.rs  piosound.rs  sound.rs
(+16 files in other folders)
