[package]
name = "midi-nostd"
version = "0.0.1"
authors = ["Andrew Brownbill <andrew.brownbill@gmail.com>"]
edition = "2021"
rust-version = "1.79"

[dependencies]
midly = { version = "0.5.3", default-features = false }
#const_soft_float = { version = "0.1.4", feature = "no_std" }
softfloat = { version = "1.0.0", feature = "no_std" }

