[package]
edition = "2021"
name = "hackernewyears"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.79"

[features]
default = ["workingssd"]
workingssd = []

[dependencies]
#
# Needed for Midi playback.  Crate up to date Aug 11 2025.
#
midi-nostd = {path = "../midi-nostd"}
midly = {version = "0.5.3", default-features = false }

#
# Animating Gifs.  Crate up to date Aug 11 2025
#
tinygif = "0.0.4"

#
# SSD display crates.  Up to date Aug 11 2025.
#
ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"

#
# Needed for delays.  Up to date Aug 11 2025.
#
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }

#
# Needed to run main.  Crash when moved to 0.8.0 and removed the target-areana-size
#
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }

#
# Basic RP support
#
embassy-rp = { version = "0.5.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }

#
# Needed for basic debugging.  Up to date Aug 11, 2025.
#
defmt = "1.0.1"
defmt-rtt = "1.0.0"

#
# Fixed point, like setting the clock divider.  Up to date Aug 11th 2025
#
fixed = "1.29.0"

#
# Main function entry point
#
cortex-m-rt = "0.7.0"

#
# Needed for panics and some misc stuff.  Up to date Aug 11 2025
#
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1"
portable-atomic = { version = "1.11", features = ["critical-section"] }

#
# For loading PIO assembler and PIO interfaces.  Up to date Aug 11 2025
#
pio = "0.3.0"

#
# For resource splitting
#
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"


